--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
   }
 
 html{
-    background: var(--react);
+    background-image: url('https://www.gannett-cdn.com/presto/2021/07/07/NREP/7bd662d3-e2f7-4a0e-b111-f959ce535c70-at_this_time.jpg?crop=2999,1687,x0,y278&width=2999&height=1687&format=pjpg&auto=webp');
 }
 
 body {
@@ -26,15 +26,21 @@ body {
     height: 400px;
     width: 320px;
     border: 1px solid var(--react);
+    opacity: 0.75;
     background-image: linear-gradient(#124e78, #5bc0be)
+    
 }
 
 .header{
     display: block;
     text-align: center;
-    color: #1C2541;
-    font-weight: bolder;
-    font-size: large;
+    color:#bbdce6;
+    font-style: oblique;
+    font-size:x-large;
+    font-family:  'Impact';
+   
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color:#1C2541
 }
 
 .para{
@@ -53,17 +59,21 @@ body {
     margin-left: 750px;
     height: 400px;
     width: 320px;
+    opacity: 0.75;
     border: 1px solid var(--react);
     background-image: linear-gradient(#124e78, #5bc0be)
 }
 
 .container3 {
     display: flex;
-    text-indent: 60px;
+    text-indent: 10px;
+    font-size: 20px;
+    text-align:center;
     margin-top: 45px;
     margin-left: 400px;
     height: 400px;
-    width: 1030px;
+    width: 1020px;
+    opacity: 0.75;
     border: 1px solid var(--react);
     background-image: linear-gradient(#124e78, #5bc0be) 
 }
@@ -76,6 +86,7 @@ body {
     margin-left: 1100px;
     height: 400px;
     width: 320px;
+    opacity: 0.75;
     border: 1px solid var(--react);
     background-image: linear-gradient(#124e78, #5bc0be)
 }
@@ -83,9 +94,26 @@ body {
 .menubar {
     display: flex;
     text-indent: 40px;
-    margin-top: -570px;
+    margin-top: -590px;
     margin-right: 1000px;
-    height: 1020px;
+    height: 1150px;
     width: 300px;
     background-color:#1C2541 
+}
+
+.list{
+    display: block;
+    margin-top: 100px;
+    margin-left: -150px;
+    text-align: left;
+    list-style-type: none;
+}
+
+.list2{
+    display: block;
+    margin-top: 100px;
+    margin-left: -280px;
+    list-style-type: none;
+    text-align: center;
+    font-size: x-large;
 }
