--- a/main.css
+++ b/main.css
@@ -21,26 +21,25 @@ body {
 .container {
     display: flex;
     text-indent: 88px;
-    margin-top: 100px;
+    margin-top: 70px;
     margin-left: 400px;
+   
     height: 400px;
     width: 320px;
     border: 1px solid var(--react);
+    border-radius: 15px;
     opacity: 0.75;
     background-image: linear-gradient(#124e78, #5bc0be)
     
 }
 
 .header{
-    display: block;
-    text-align: center;
-    color:#bbdce6;
-    font-style: oblique;
-    font-size:x-large;
-    font-family:  'Impact';
-   
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color:#1C2541
+    display: flex;
+    justify-content: center;
+    color:#e8edee;
+    font-size:xx-large;
+    font-weight: 100;
+    font-family: 'Goldman', cursive;
 }
 
 .para{
@@ -57,24 +56,27 @@ body {
     text-indent: 60px;
     margin-top: -403px;
     margin-left: 750px;
+    
     height: 400px;
     width: 320px;
     opacity: 0.75;
     border: 1px solid var(--react);
+    border-radius: 15px;
     background-image: linear-gradient(#124e78, #5bc0be)
 }
 
 .container3 {
     display: flex;
-    text-indent: 10px;
+    text-indent: 40px;
     font-size: 20px;
-    text-align:center;
+    text-align:right;
     margin-top: 45px;
     margin-left: 400px;
     height: 400px;
     width: 1020px;
     opacity: 0.75;
     border: 1px solid var(--react);
+    border-radius: 15px;
     background-image: linear-gradient(#124e78, #5bc0be) 
 }
 
@@ -88,17 +90,20 @@ body {
     width: 320px;
     opacity: 0.75;
     border: 1px solid var(--react);
+    border-radius: 15px;
     background-image: linear-gradient(#124e78, #5bc0be)
 }
 
 .menubar {
     display: flex;
     text-indent: 40px;
-    margin-top: -590px;
-    margin-right: 1000px;
-    height: 1150px;
+    margin-top: -400px;
+    margin-right: 900px;
+    margin-left: 40px;
+    height: 700px;
     width: 300px;
-    background-color:#1C2541 
+    background-color:#1C2541; 
+    border-radius: 20px;
 }
 
 .list{
